[project]
name = "neo4j-arbitrary"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "neo4j>=5.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
