[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "neo4j-arbitrary"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "httpx>=0.28.1",
    "neo4j>=6",
    "pydantic>=2",
    "structlog>=25",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=9",
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
